{
    "name": "ZombieControl",
    "maps": [
        {
            "name": "ZombieMovement",
            "id": "1682bbd8-5862-4400-9a6f-adf77fb529a2",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "85163f74-da4d-48c5-95a9-6c21c7c52ae1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "6031183d-c1b1-4f1d-a1b5-b99af7df618a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "8379dc7c-2d35-4e2e-ac5c-c963bac22207",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Scream",
                    "type": "Button",
                    "id": "93322ed3-1476-460d-a8c6-2fe812c8dbf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "296ffc22-21c4-4524-b593-fa1d107913cd",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "af18cbe2-2e37-4441-9081-df095f55224a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb55c5d-35bc-405f-810c-828d529f4c61",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "Hold(pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4a64c9d-80bd-42a0-b402-72c67108705f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Scream",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}